@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false

class DeleteInterviewCommand {
    - InternshipList internshipList
    - InterviewList interviewList
    + DeleteInterviewCommand(Parser, InternshipList, InterviewList)
    + execute()
    + getCommandDescription()
    + getFlagDescription()
}

class Command {
    # Ui ui
    # Parser parser
    + Command()
    + Command(Parser)
    + execute()
    # getCommandDescription()
    # getFlagDescription()
    # printHelp()
}

class InternshipList {
    - List<Internship> internships
    + getInternships()
    + getSize()
    + get(index)
}

class InterviewList {
    - List<Interview> interviews
    + getInterviews()
    + deleteByInternship(Internship)
    + size()
}

class Internship {
    - String title
    - String companyName
    - Interview interview
    + getCompanyName()
    + getTitle()
    + getInterview()
    + deleteInterview()
}

class Interview {
    - Internship internship
    - LocalDateTime dateTime
    + getInternship()
    + getDate()
    + getInternship()
}

DeleteInterviewCommand --|> Command
DeleteInterviewCommand --> InternshipList
DeleteInterviewCommand --> InterviewList
InternshipList o--> Internship
InterviewList o--> Interview
Internship --> Interview
@enduml
